--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-hopsworks[python,great-expectations]
-hopsworks==4.2.*
-hsfs==4.2.*
+hopsworks[python,great-expectations]==4.2.*
 streamlit==1.28.2
 email-validator==2.2.0
 pydantic-settings>=2.6.1
