--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
 hopsworks
-streamlit==1.28.2
-email-validator==2.2.0
-pydantic-settings>=2.6.1
-geopy==2.4.1
 openmeteo-requests
 requests-cache==1.2.0
 retry-requests==2.0.0
@@ -16,9 +12,9 @@ nbformat
 Faker
 invoke
 python-dotenv
-torch
-torchvision
-torchaudio
+torch --index-url https://download.pytorch.org/whl/cpu
+torchvision --index-url https://download.pytorch.org/whl/cpu
+torchaudio --index-url https://download.pytorch.org/whl/cpu
 transformers
 yfinance
 
