--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -13,6 +13,19 @@ jobs:
       contents: write # Needed to push changes
 
     steps:
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but usually for python workflows it's fine
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -25,6 +38,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          # Install CPU-only torch FIRST to prevent downloading huge CUDA wheels
+          pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+          # Then install the rest
           pip install -r requirements.txt
           pip install papermill ipykernel jupyter
 
